--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "start:debug": "DEBUG=* node app.js"
   },
   "dependencies": {
-    "axios": "^0.18.0",
+    "axios": "^0.21.1",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.4",
     "babel-preset-es2015": "^6.24.1",
+    "d3": "^7.0.0",
     "express": "^4.15.3",
+    "google-trends-api": "^4.9.2",
     "node-fetch": "^1.7.3",
     "node-sass": "^4.7.2",
     "sass-loader": "^6.0.7",
