--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "node-fetch": "^1.7.3",
     "node-sass": "^4.7.2",
     "sass-loader": "^6.0.7",
+    "topojson": "^3.0.2",
     "webpack": "^3.4.1"
   },
   "devDependencies": {
