--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "babel-loader": "^7.1.4",
     "babel-preset-es2015": "^6.24.1",
     "d3": "^6.7.0",
+    "d3-collection": "^1.0.7",
     "express": "^4.15.3",
     "google-trends-api": "^4.9.2",
     "node-fetch": "^1.7.3",
